# llm-from-scratch

./: .gitignore  README.md  pyproject.toml
data/benchmarks/inference_benchmark_kv/: results.csv
data/processed/yugioh/v001/: metadata.json  small-train.txt  tokenizer-bpe.json  tokenizer-char.json  val.txt
docs/inference-arithmetic/: transformer-inference-arithmetic.tex
scripts/: benchmark_inference_engine.py  build_tokenizer.py  calculate_arithmetic_intensity.py  create_dataset.py  demo_paged_attention.py  download_data.py  inference.py  open_pack.py  testout.py  train.py
src/llm_from_scratch/: checkpoint.py  dataset.py  engine.py  generation.py  kv_cache.py  model.py  paged_kv_cache.py  scheduler.py  tokenizer.py  transformer.py  tryout.py  utils.py
tests/: test_checkpoint.py  test_inference_engine.py  test_tokenizer.py  test_transformer.py
